--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
@@ -26,12 +27,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "17.0.30",
     "@types/react-native": "~0.64.12",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@types/react": "^17"
+  }
 }
