--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "json-server ./src/services/server.json --host 172.18.0.1 --port 3333 --delay 500"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
